# cpp-flags

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cppflagsConfig.cmake.in
include/cppflags/: cppflags.hpp
